# cpp-stdin-out-tests

./: CMakeLists.txt  main.cpp  readme.md
Google_tests/: CMakeLists.txt  TaskTwoTests.cpp
TaskTwoLib/: CMakeLists.txt  TaskTwo.cpp  TaskTwoResult.h
